# infMOSTRO

./: .gitignore  CMakeList.txt  CMakeLists.txt  README.md
build2/: CMakeCache.txt  Makefile  cmake_install.cmake
build2/src/: Makefile  cmake_install.cmake
cmake/: FindBoost.cmake  FindJsonCpp.cmake  FindSpdlog.cmake  GetVersion.cmake  infMOSTROPackaging.cmake
data/: Intersecciones_Nomenclatura.xlsx  info_intersecciones.xlsx
data/av33_cr66a/flexi/: av33_cr66a.json
data/cll44_cr65/ars/: cll44_cr65.json
data/cll44_cr65/flexi/: cll44_cr65.json
data/cll44_cr84/flexi/: cll44_cr84.json  cll44_cr84_labeled.csv  means.csv  phase_times.csv
data/cr65_cll43/flexi/: cr65_cll43.json
data/infmostro/av33_cr66a/flexi/: av33_cr66a.json  av33_cr66a.log.txt
data/infmostro/av33_cr66b/flexi/: av33_cr66b.json
data/infmostro/av33_cr76/flexi/: av33_cr76.json
data/infmostro/av33_cr78/flexi/: av33_cr78.json
data/infmostro/av33_cr80/flexi/: av33_cr80.json
data/infmostro/av80_av33/ars/: av80_av33.json
data/infmostro/av80_av33/flexi/: av80_av33.json
data/infmostro/av80_cll35/ars/: av80_cll35.json
data/infmostro/av80_cll35/flexi/: av80_cll35.json
data/infmostro/cll44_cr65/ars/: cll44_cr65.json  cll44_cr65.log.txt
data/infmostro/cll44_cr65/flexi/: cll44_cr65.json
data/infmostro/cll44_cr68a/flexi/: cll44_cr68a.json
data/infmostro/cll44_cr70/ars/: cll44_cr70.json
data/infmostro/cll44_cr70/flexi/: cll44_cr70.json
data/infmostro/cll44_cr73/flexi/: cll44_cr73.json
data/infmostro/cll44_cr74/flexi/: cll44_cr74.json
data/infmostro/cll44_cr78/flexi/: cll44_cr78.json
data/infmostro/cll44_cr79aa/flexi/: cll44_cr79aa.json
data/infmostro/cll44_cr80a/flexi/: cll44_cr80a.json
data/infmostro/cll44_cr84/flexi/: cll44_cr84.json  cll44_cr84.log.txt
data/infmostro/confs/av33_cr66a/flexi/: av33_cr66a.json
data/infmostro/confs/av33_cr66b/flexi/: av33_cr66b.json
data/infmostro/confs/av33_cr76/flexi/: av33_cr76.json
data/infmostro/confs/av33_cr78/flexi/: av33_cr78.json
data/infmostro/confs/av80_av33/ars/: av80_av33.json
data/infmostro/confs/av80_cll35/ars/: av80_cll35.json
data/infmostro/confs/av80_cll35/flexi/: av80_cll35.json
data/infmostro/confs/cll44_cr78/flexi/: cll44_cr78.json
data/infmostro/confs/cll44_cr80a/flexi/: cll44_cr80a.json
data/infmostro/confs/cll44_cr84/flexi/: cll44_cr84.json
data/infmostro/confs/cr65_cll38/flexi/: cr65_cll38.json
data/infmostro/confs/cr66b_cq1/flexi/: cr66b_cq1.json
data/infmostro/confs/cr66b_cr65/flexi/: cr66b_cr65.json
data/infmostro/confs/cr70_cll43/flexi/: cr70_cll43.json
data/infmostro/confs/tv39b_cq4/flexi/: tv39b_cq4.json
data/infmostro/confs/tv39b_cq73b/flexi/: tv39b_cq73b.json
data/infmostro/confs/tv39b_cr79/flexi/: tv39b_cr79.json
data/infmostro/cr65_cll38/flexi/: cr65_cll38.json
data/infmostro/cr65_cll43/flexi/: cr65_cll43.json
data/infmostro/cr66b_cq1/flexi/: cr66b_cq1.json
data/infmostro/cr66b_cr65/ars/: cr66b_cr65.json
data/infmostro/cr66b_cr65/flexi/: cr66b_cr65.json
data/infmostro/cr70_cll43/flexi/: cr70_cll43.json
data/infmostro/cr70_cq1/flexi/: cr70_cq1.json
data/infmostro/logs/: README.txt
data/infmostro/tv39b_cq4/flexi/: tv39b_cq4.json
data/infmostro/tv39b_cq73b/flexi/: tv39b_cq73b.json
data/infmostro/tv39b_cq74b/flexi/: tv39b_cq74b.json
data/infmostro/tv39b_cr79/flexi/: tv39b_cr79.json
include/: infmostro.h  mostro.h
include/infmostro/: interfaces.h  mostro.h  wrapper.h
python/: .gitignore  README.md  main.py  requirements.txt
python/confs/: cll44_cr65(ars).yml  cll44_cr65(flexi).yml  cll44_cr65(flexi)_orig.yml  cll44_cr65.yml  cll44_cr80a(flexi).yml  cll44_cr84(flexi).yml  prueba.yml
python/pyinfmostro/: clustering_results.py  historic_data.py  least_squares.py  optimize.py  svd_kmeans.py
src/: CMakeLists.txt  interfaces.cpp  mostro.cpp  wrapper.cpp
test/: CMakeLists.txt  main.cpp
